# rules-for-tools

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  eleventy.bzl  index.bzl  package-lock.json  package.json  stamp_vars.sh  typedoc.bzl
examples/: BUILD.bazel  tsconfig.json
examples/eleventy/: BUILD.bazel  index.md
examples/eleventy/config/: BUILD.bazel  advanced_config.ts  eleventy.js  foo.ts  simple_config.ts
examples/typedoc/: BUILD.bazel  foo.ts
